--- a/ryd_share_sky/package.json
+++ b/ryd_share_sky/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@smartcar/auth": "^2.0.0",
+    "bulma": "^0.7.2",
+    "bulma-extensions": "^4.0.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router": "^4.3.1",
