template landing page

--- a/ryd_share_sky/package.json
+++ b/ryd_share_sky/package.json
@@ -4,8 +4,16 @@
   "private": true,
   "dependencies": {
     "@smartcar/auth": "^2.0.0",
+    "browser-sync": "^2.26.3",
     "bulma": "^0.7.2",
     "bulma-extensions": "^4.0.0",
+    "gulp": "^3.9.1",
+    "gulp-changed": "^3.2.0",
+    "gulp-clean-css": "^4.0.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router": "^4.3.1",
