--- a/ryd_share_sky/package.json
+++ b/ryd_share_sky/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "dependencies": {
     "@smartcar/auth": "^2.0.0",
+    "apollo-boost": "^0.1.22",
+    "apollo-client": "^2.4.7",
+    "apollo-link-state": "^0.4.2",
     "browser-sync": "^2.26.3",
     "bulma": "^0.7.2",
     "bulma-extensions": "^4.0.0",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
     "gulp": "^3.9.1",
     "gulp-changed": "^3.2.0",
     "gulp-clean-css": "^4.0.0",
@@ -15,6 +20,7 @@
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.1",
     "react": "^16.6.3",
+    "react-apollo": "^2.3.2",
     "react-dom": "^16.6.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
