--- a/ryd_share_sky/package.json
+++ b/ryd_share_sky/package.json
@@ -25,6 +25,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-scroll": "^1.7.10",
+    "react-typist": "^2.0.4",
     "smartcar": "^4.2.1"
   },
   "scripts": {
