--- a/ryd_share_sky/package.json
+++ b/ryd_share_sky/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-scroll": "^1.7.10",
+    "react-typing-animation": "^1.4.0",
     "react-typist": "^2.0.4",
     "smartcar": "^4.2.1"
   },
