--- a/ryd_share_ground/package.json
+++ b/ryd_share_ground/package.json
@@ -14,6 +14,12 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "mongo": "^0.1.0",
+    "mongoose": "^5.3.14",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "smartcar": "^4.2.1"
   }
 }
