--- a/ryd_share_sky/package.json
+++ b/ryd_share_sky/package.json
@@ -10,6 +10,7 @@
     "browser-sync": "^2.26.3",
     "bulma": "^0.7.2",
     "bulma-extensions": "^4.0.0",
+    "fontawesome": "^4.7.2",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "gulp": "^3.9.1",
